# StudyMathAI

./: .gitignore  LICENSE  README.md  pyproject.toml
api/: API_STRUCTURE.md  main.py  utils.py
api/routes/: __init__.py  books.py  chat.py  content.py  deletion.py  extract.py  pipeline.py  processing.py  search.py  slides.py
studymathai/: chatbot.py  data_models.py  db.py  generator.py  indexer.py  logging_config.py  main.py  models.py  processing_status.py  processor.py  retriever.py  utils.py
studymathai/agent/: __init__.py  chatbot.py
studymathai/assistant/: __init__.py  chatbot.py
studymathai/chat/: chatbot.py
studymathai/database/: __init__.py  core.py  models.py  processing_status.py  transform.py
studymathai/processing/: __init__.py  extraction.py  generation.py  segmentation.py
studymathai/repositories/: __init__.py  books.py  chapters.py  pages.py  segments.py  slides.py  status.py  toc.py
studymathai/services/: __init__.py  extraction.py
studymathai/services/kb/: __init__.py  indexer.py  retriever.py
studymathai/services/pdf/: __init__.py
